start Projects page and refine responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
     html, body, #root, #root>div {
       display: flex;
       justify-content: center;
-      margin-top: 20px;
+      padding-top: 20px;
+      height: 90vh;
+      min-height: 700px;
     }
   </style>
 </head>
