Fix main container div to fit all child components upon window resize

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
       display: flex;
       justify-content: center;
       padding-top: 20px;
-      height: 90vh;
-      min-height: 700px;
+      height: max-content;
+      min-height: 90vh;
     }
     body {
       overflow-y: scroll;
