--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,18 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
 
-  <script src='../firebase-config.js'></script>
-  <script type='module'>
+  <script>
     // Your web app's Firebase configuration
-    import { firebaseConfig } from '../firebase-config.js';
+    var firebaseConfig = {
+      apiKey: "AIzaSyDz3vDM60yIwdOvTVxqi895sHuFQRCQOeQ",
+      authDomain: "chrisrau-ch.firebaseapp.com",
+      databaseURL: "https://chrisrau-ch.firebaseio.com",
+      projectId: "chrisrau-ch",
+      storageBucket: "chrisrau-ch.appspot.com",
+      messagingSenderId: "978304304348",
+      appId: "1:978304304348:web:e7804bcd428a8efed86019",
+      measurementId: "G-YF85W44W5X"
+    };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
