--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 <body>
   <div id="app"></div>
   <script src="bundle.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
 
