--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       min-height: 90vh;
     }
 
-    body {
-      overflow-y: scroll;
+    html {
+      margin-left: calc(100vw - 100%);
     }
   </style>
 </head>
@@ -36,7 +36,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
+      https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
 
   <script>
